--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
@@ -147,6 +147,77 @@
                             <input formControlName="number" type="text" id="prod-number" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                         
                         </div>
+                        <label class="font-bold text-lg col-span-2">{{ 'UPDATE_RES_SPEC._status' | translate }}</label>
+                        <div class="mb-2 col-span-2">
+
+                            <ol class="flex items-center w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400 sm:text-base">
+                                @if(prodStatus=='Active'){
+                                    <li (click)="setProdStatus('Active')" class="cursor-pointer flex w-full items-center text-blue-500 after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                        <span class="flex items-center">
+                                            <svg class="w-6 h-6 text-blue-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                                <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
+                                            </svg>                                     
+                                            Active
+                                        </span>
+                                    </li>
+                                }@else{
+                                    <li (click)="setProdStatus('Active')" class="cursor-pointer flex w-full items-center text-gray-800 after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                        <span class="flex items-center">                                    
+                                            Active
+                                        </span>
+                                    </li>
+                                }
+                                @if(prodStatus=='Launched'){
+                                    <li (click)="setProdStatus('Launched')" class="cursor-pointer flex md:w-full items-center text-green-700 after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                        <span class="flex items-center">
+                                            <svg class="w-6 h-6 text-green-700" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                                <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
+                                            </svg>                                          
+                                            Launched
+                                        </span>
+                                    </li>
+                                }@else{
+                                    <li (click)="setProdStatus('Launched')" class="cursor-pointer flex md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                        <span class="flex items-center">                                         
+                                            Launched
+                                        </span>
+                                    </li>
+                                }
+                                @if(prodStatus=='Retired'){
+                                    <li (click)="setProdStatus('Retired')" class="cursor-pointer flex md:w-full items-center text-yellow-500 after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                        <span class="flex items-center">
+                                            <svg class="w-6 h-6 text-yellow-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                                <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
+                                            </svg>                                          
+                                            Retired
+                                        </span>
+                                    </li>
+                                }@else{
+                                    <li (click)="setProdStatus('Retired')" class="cursor-pointer flex md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                        <span class="flex items-center">                                        
+                                            Retired
+                                        </span>
+                                    </li>
+                                }
+                                @if(prodStatus=='Obsolete'){
+                                    <li (click)="setProdStatus('Obsolete')" class="cursor-pointer flex items-center">
+                                        <span class="flex items-center text-gray-800">
+                                            <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                                <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
+                                            </svg>                                          
+                                            Obsolete
+                                        </span>
+                                    </li>
+                                }@else{
+                                    <li (click)="setProdStatus('Obsolete')" class="cursor-pointer flex items-center">
+                                        <span class="flex items-center">                                        
+                                            Obsolete
+                                        </span>
+                                    </li>
+                                }
+                            </ol>
+
+                        </div>
                         <label for="prod-name" class="font-bold text-lg col-span-2">{{ 'UPDATE_PROD_SPEC._product_description' | translate }}</label>
                         <div class="w-full col-span-2 mb-4 border border-gray-200 rounded-lg bg-gray-50">
                             <div class="flex items-center justify-between px-3 py-2 border-b">
@@ -421,11 +492,13 @@
                                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v9m-5 0H5a1 1 0 0 0-1 1v4a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-4a1 1 0 0 0-1-1h-2M8 9l4-5 4 5m1 8h.01"/>
                                                 </svg>                                                
                                             </button>
-                                            <button (click)="verifyCredential(sel)" type="button" class="text-white mr-4 bg-green-600 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-700 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
-                                                <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 11.917 9.724 16.5 19 7.5"/>
-                                                  </svg>                                                  
-                                            </button>                                           
+                                            @if(sel.domesupported==true){
+                                                <button (click)="verifyCredential(sel)" type="button" class="text-white mr-4 bg-green-600 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-700 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
+                                                    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 11.917 9.724 16.5 19 7.5"/>
+                                                      </svg>                                                  
+                                                </button>  
+                                            }                                         
                                             <button (click)="removeISO(sel)" type="button" class="text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
                                                 <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6"/>
