--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
 <main class="bg-fixed bg-no-repeat bg-right pb-[25px]" [ngClass]="showPanel ? 'pt-[121px]' : 'pt-[75px]'">
     <router-outlet></router-outlet>
 </main>
+<app-chatbot-widget class="relative"></app-chatbot-widget>
 <bae-footer></bae-footer>
-
