--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -64,8 +64,8 @@
                     <bae-badge class="mr-2" [category]=cat></bae-badge>
                 }
                 <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2"
-                    [ngClass]="complianceLevel==1 ? 'bg-red-200 text-red-700' : complianceLevel==2 ? 'bg-yellow-200 text-yellow-700' : 'bg-green-200 text-green-700'">
-                    <fa-icon [icon]="faAtom" class="mr-2" [ngClass]="complianceLevel==1 ? 'text-red-700' : complianceLevel==2 ? 'text-yellow-700' : 'text-green-700'"></fa-icon>
+                    [ngClass]="complianceLevel == 1 ? 'bg-red-200 text-red-700' : complianceLevel == 2 ? 'bg-yellow-200 text-yellow-700' : 'bg-green-200 text-green-700'">
+                    <fa-icon [icon]="faAtom" class="mr-2" [ngClass]="complianceLevel == 1 ? 'text-red-700' : complianceLevel == 2 ? 'text-yellow-700' : 'text-green-700'"></fa-icon>
                     @if(complianceLevel==1){
                         Level 1
                     } @else if(complianceLevel==2) {
@@ -173,8 +173,8 @@
                     @for (char of complianceProf; track char.id) {
                         <div class="w-1/3 px-4 mb-8">                
                             <div class="border border-2 rounded-lg shadow bg-white shadow-md p-8 h-full"
-                            [ngClass]="char.href == '#' ? 'border-red-400' : 'border-gray-400'">
-                                <h3 class="text-2xl font-bold mb-4">{{char.name}}</h3>            
+                            [ngClass]="char.href == '#' ? 'border-red-400' : (isVerified(char) && char.domesupported == true ? 'border-green-400' : 'border-gray-400')">
+                                <h3 class="text-2xl font-bold mb-4">{{char.name}}</h3>
                                 <div class="flex justify-between">
                                     @if (char.href == '#') {
                                         <a class="text-xs ml-4 font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-red-200 text-red-700">
@@ -185,17 +185,16 @@
                                         <a class="mb-2 font-normal pl-4 text-primary-100" target="_blank" href="{{char.href}}">
                                             {{char.value}}
                                         </a>
-                                        <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-gray-400 text-gray-900">
-                                            Self declared
-                                        </a>
-                                        <!--
-                                            TODO: WHEN VERIFIED APPLIED SHOW VERIFIED 
-                                            @if(char.domesupported==true && verified){
+                                        @if(!char.domesupported || !isVerified(char)) {
+                                            <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-gray-400 text-gray-900">
+                                                Self declared
+                                            </a>
+                                        }
+                                        @if(char.domesupported == true && isVerified(char)){
                                             <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-green-200 text-green-700">
                                                 Dome verified
                                             </a>
-                                            }                                      
-                                        -->
+                                        }
                                     }
                                     @if(char.domesupported == true){
                                         <fa-icon [icon]="faAtom" class="fa-2xl text-primary-100 align-middle"></fa-icon>
