--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
@@ -492,12 +492,20 @@
                                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v9m-5 0H5a1 1 0 0 0-1 1v4a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-4a1 1 0 0 0-1-1h-2M8 9l4-5 4 5m1 8h.01"/>
                                                 </svg>                                                
                                             </button>
-                                            @if(sel.domesupported==true){
-                                                <button (click)="verifyCredential(sel)" type="button" class="text-white mr-4 bg-green-600 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-700 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
-                                                    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 11.917 9.724 16.5 19 7.5"/>
-                                                      </svg>                                                  
-                                                </button>  
+                                            @if(sel.domesupported == true) {
+                                                @if(isVerified(sel)) {
+                                                    <button (click)="verifyCredential(sel)" type="button" class="text-white mr-4 bg-green-600 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-700 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
+                                                        <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 11.917 9.724 16.5 19 7.5"/>
+                                                          </svg>                                                  
+                                                    </button>
+                                                } @else {
+                                                    <button (click)="verifyCredential(sel)" type="button" class="text-white mr-4 bg-slate-400 hover:bg-slate-500 focus:ring-4 focus:outline-none focus:ring-green-700 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
+                                                        <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 11.917 9.724 16.5 19 7.5"/>
+                                                          </svg>                                                  
+                                                    </button>
+                                                }
                                             }                                         
                                             <button (click)="removeISO(sel)" type="button" class="text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
                                                 <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
