--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
   </section>
   <!-- End Jumbo section -->
 
-  <!--<section class="content mx-auto z-20 pt-8 pb-5 px-4 mx-auto max-w-screen-xl lg:pb-5 lg:pt-16 w-full flex items-center" [ngClass]="isFilterPanelShown ? 'sticky top-[118px] backdrop-blur-sm': 'sticky top-[72px] backdrop-blur-sm'">
+  <section class="content mx-auto pt-8 pb-5 px-4 mx-auto max-w-screen-xl lg:pb-5 lg:pt-16 w-full flex items-center" [ngClass]="isFilterPanelShown ? 'sticky top-[118px] backdrop-blur-sm z-20': 'sticky top-[72px] backdrop-blur-sm z-20'">
     <form class="mx-5 w-full">
       <div class="flex">
         <label for="search-dropdown" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Your Email</label>
@@ -58,7 +58,7 @@
         </div>
       </div>
     </form>
-  </section>-->
+  </section>
 
   <bae-off-gallery></bae-off-gallery>
   <app-how-it-works></app-how-it-works>
