--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -9,13 +9,32 @@
       <span class="sr-only">Loading...</span>
     </div>
   } @else {
-      <div class="w-3/4 md:w-4/5 pl-5 grid grid-cols-1 place-items-center sm:grid-cols-2 lg:grid-cols-3 h-full">
-        @for (prod of products; track prod.id) {
-          <bae-off-card [productOff]=prod class="w-full h-full p-2"></bae-off-card>
-        } @empty {
-          <div class="min-h-19 dark:text-gray-600 text-center">No se han encontrado ofertas.</div>
-        } 
-      </div>
+    <div class="flex flex-col w-3/4 md:w-4/5">
+      <section class="w-3/4 md:w-4/5 pl-5 content pb-5 px-4 flex items-center">
+        <form class="mx-5 w-full">
+          <div class="flex">
+            <div class="relative w-full">
+              <input type="search" id="search-dropdown" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-s-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500" placeholder="{{ 'DASHBOARD._search_ph' | translate }}" required>
+              <button type="submit" class="absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-blue-700 rounded-e-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                </svg>
+                <span class="sr-only">{{ 'DASHBOARD._search' | translate }}</span>
+              </button>
+            </div>
+          </div>
+        </form>
+      </section>
+        <div class="w-3/4 md:w-4/5 pl-5 grid grid-cols-1 place-items-center sm:grid-cols-2 lg:grid-cols-3 h-full">
+          @for (prod of products; track prod.id) {
+            <bae-off-card [productOff]=prod class="w-full h-full p-2"></bae-off-card>
+          } @empty {
+            <div class="min-h-19 dark:text-gray-600 text-center">No se han encontrado ofertas.</div>
+          } 
+        </div>
+    </div>
+
+
   }
   
 </section>
