--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -10,7 +10,7 @@
     </div>
   } @else {
     <div class="flex flex-col w-3/4 md:w-4/5">
-      <section class="w-3/4 md:w-4/5 pl-5 content pb-5 px-4 flex items-center">
+      <section class="pl-5 content pb-5 px-4 flex items-center">
         <form class="mx-5 w-full">
           <div class="flex">
             <div class="relative w-full">
@@ -25,7 +25,7 @@
           </div>
         </form>
       </section>
-        <div class="w-3/4 md:w-4/5 pl-5 grid grid-cols-1 place-items-center sm:grid-cols-2 lg:grid-cols-3 h-full">
+        <div class="pl-5 grid grid-cols-1 place-items-center sm:grid-cols-2 lg:grid-cols-3 h-full">
           @for (prod of products; track prod.id) {
             <bae-off-card [productOff]=prod class="w-full h-full p-2"></bae-off-card>
           } @empty {
